switching font stack

--- a/css/mine.css
+++ b/css/mine.css
@@ -1,11 +1,11 @@
 h1, h2, h3, h4, h5, h6 {
-    font-family: Consolas,monaco,monospace;
+    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
 }
 h1 {
     color: green;
 }
 html {
-    font-family: Consolas,monaco,monospace;
+    font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
 }
 
 body {
