--- a/css/mine.css
+++ b/css/mine.css
@@ -4,6 +4,9 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     color: green;
 }
+h1.title {
+    margin-bottom: 2em;
+}
 html {
     font-family: SFMono-Regular,Consolas,Liberation Mono,Menlo,Courier,monospace;
 }
