--- a/css/brutal.css
+++ b/css/brutal.css
@@ -12,20 +12,19 @@ h1 {
     font-size: 72px;
 }
 
+.blogpost h1 {
+    font-size: 54px;
+}
+
 .spacious {
     margin: 200px 0;
 }
 
-.bigtext, h3 {
+.bigtext, h3.subtitle {
     font-size: 63px;
     font-weight: 800;
     line-height: 54px;
     text-transform: uppercase;
-}
-
-.bigtext a {
-    text-decoration: none;
-    color: black;
 }
 
 .desctext {
@@ -37,7 +36,7 @@ h1 {
 
 a.simple-link {
     text-decoration-style: wavy;
-    text-decoration-color: #fafafa;
+    text-decoration-color: #f1f1f1;
     color: black;
 }
 
@@ -45,4 +44,39 @@ a.simple-link {
     list-style-type: square;
     font-size: 36px;
     text-transform: uppercase;
+}
+
+.blogpost p {
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+
+.post-list a {
+    text-decoration-style: wavy;
+    text-decoration-color: #f1f1f1;
+    color: black;
+
+}
+
+dt, dd {
+    font-weight: 800;
+    font-size: 36px;
+}
+dt {
+    text-transform: uppercase;
+}
+dd {
+    margin-left: 4ch;
+    margin-bottom: 2ex;
+}
+
+dl a {
+    text-decoration-style: wavy;
+    text-decoration-color: #f1f1f1;
+    color: black;
+}
+
+a {
+    text-decoration-style: wavy;
+    text-decoration-color: #f1f1f1;
+    color: black;
 }
