--- a/css/brutal.css
+++ b/css/brutal.css
@@ -32,6 +32,7 @@ h1 {
     font-weight: 700;
     text-transform: uppercase;
     line-height: 40px;
+    margin: 3ex 0;
 }
 
 a.simple-link {
@@ -46,8 +47,11 @@ a.simple-link {
     text-transform: uppercase;
 }
 
-.blogpost p {
+.blogpost p, .caption {
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+}
+.caption {
+    text-align: center;
 }
 
 .post-list a {
@@ -80,3 +84,4 @@ a {
     text-decoration-color: #f1f1f1;
     color: black;
 }
+
