--- a/css/brutal.css
+++ b/css/brutal.css
@@ -47,7 +47,7 @@ a.simple-link {
     text-transform: uppercase;
 }
 
-.blogpost p, .caption {
+.blogpost p, .caption, .normal {
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 }
 .caption {
